add post type and dietary tags, light refactoring
